@@ -387,8 +387,12 @@ class MockMvcRequestSenderImpl implements MockMvcRequestSender, MockMvcRequestAs
 
     // TODO Extract content-type from headers and apply charset if needed!
     private String findContentType() {
-        EncoderConfig encoderConfig = config.getEncoderConfig();
         String requestContentType = headers.getValue(CONTENT_TYPE);
+        if (StringUtils.isBlank(requestContentType) && !multiParts.isEmpty()) {
+            requestContentType = "multipart/" + config.getMultiPartConfig().defaultSubtype();
+        }
+
+        EncoderConfig encoderConfig = config.getEncoderConfig();
         if (requestContentType != null && encoderConfig.shouldAppendDefaultContentCharsetToContentTypeIfUndefined() && !StringUtils.containsIgnoreCase(requestContentType, CHARSET)) {
             // Append default charset to request content type
             requestContentType += "; charset=" + encoderConfig.defaultContentCharset();
